@@ -11,6 +11,7 @@ New for version x.y:
  - Change return values of --help and --version to success.
  - Support higher baud rates on MacOS
  - Save character send delay to config file
+ - Save newline send delay to config file
  - Update translations: Romanian, German, French, Norwegian/Bookmal, Polish,
                         Serbian
 
